k8-ingress/app2/ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
  labels:
    app: app2
    project: JCSGlobal
    environment: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
      project: JCSGlobal
      environment: dev
  template:
    metadata:
      labels:
        app: app2
        project: JCSGlobal
        environment: dev
    spec:
      containers:
        - name: app2
          image: nginx:latest
          ports:
            - containerPort: 80
            
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  labels:
    app: app2
    project: JCSGlobal
    environment: dev
spec:
  selector:
    app: app2
    project: JCSGlobal
    environment: dev
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
  labels:
    app: app2
    project: JCSGlobal
    environment: dev
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:160885265516:certificate/a1f7483d-ee32-446c-a9b9-e7fdcca18ff6
    alb.ingress.kubernetes.io/scheme: internet-facing  ## intranet-facing use this for internal 
    alb.ingress.kubernetes.io/tags: Environment=dev,Project=JCSGlobal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: JCSGlobal  ## IMP if already created alb group name then use the same name here to create new ingress in the same alb group
spec:
  ingressClassName: alb
  rules:
    - host: app2.jcsglobal.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 80

## why use annotations for ALB Ingress Controller?
# The annotations in the ALB Ingress Controller are used to configure specific settings 
#and behaviors for the Application Load Balancer (ALB) that is created to manage incoming traffic to your Kubernetes services. Here’s why they are important:

# for extranal access: The annotations allow you to specify how the ALB should handle incoming traffic, including which ports to listen on, whether to use HTTPS, and which SSL/TLS certificate to use for secure connections. 
# Within cluster use labels 

# "" kubectl apply -f k8-ingress/app2/ingress.yaml
# kubectl get ingress app2-ingress
# kubectl describe ingress app2-ingress
# kubectl get svc app2-service
# kubectl get deployment app2-deployment ""

# kubectl delete ingress app2-ingress

## --> Ec2 instence -- loadbalancer name: jcsglobal-dev-ALB-1 --> HTTPS:443 --> Target group name: app2-service --> Target group port: 80 --> Target group protocol: HTTP
